--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
       <meta charset="UTF-8">
-      <title>Arrow Machinery Equipment Co, Ltd|Casing Pup Joint|Tubing Pup Joint|Torque Ring|oilfield equipment|petroleum|oil|gas|Schlumberger|Halliburton|Baker Hughes</title>
+      <title>Arrow Machinery Equipment Co, Ltd|Casing Pup Joint|Tubing Pup Joint|Drilling Jar|oilfield equipment|petroleum|oil|gas|Schlumberger|Halliburton|Baker Hughes</title>
 </head>
 <body>
       <table align="center" border="1" bgcolor="orange">
@@ -23,7 +23,7 @@
         <th><select name="pageselect" onchange="self.location.href=options[selectedIndex].value" 
                     style='font-size:40px;text-align:center;background:lightsalmon;color:black;border:none'>
                  <option value=' https://oilfieldtools.github.io/drillpipe'>Drill Pipe</option>
-                 <option value='https://oilfieldtools.github.io/torquering'>Torque Ring</option>
+                 <option value='https://oilfieldtools.github.io/torquering'>Drilling Jar</option>
                  <option value='https://oilfieldtools.github.io/cableprotector'>Cable Protector</option>
                  <option value ='https://oilfieldtools.github.io/insulationjoint'><strong>Insulation Joint</strong></option>
                  <option value='https://oilfieldtools.github.io/suckerrod'>sucker rod</option>
@@ -36,8 +36,8 @@
       <!--以上是菜单-->
      <table align="center" border="1" bgcolor="yellow">
       <tr>
-        <th><a href=https://www.facebook.com/jason.liu.497933/><img src="./fb.png" alt="torque ring" width="60" height="50" 
-         alt="oilfield equipment torque ring petroleum drilling rig"></a></th>
+        <th><a href=https://www.facebook.com/jason.liu.497933/><img src="./fb.png" alt="Drilling Jar" width="60" height="50" 
+         alt="oilfield equipment Drilling Jar petroleum drilling rig"></a></th>
         <th><h3>Email</h3></th>
         <th><h3>frank0121@foxmail.com</h3></th>
         <th><h3>whatsapp</h3></th>
@@ -46,20 +46,33 @@
      </table>
     <!--以上是联系方式-->
    <div align="center">
-      <a href=https://oilfieldtools.github.io/drill-collar><img src="./banner.png" width="1860" height="465" alt="oilfield equipment Torque Ring petroleum rig drilling"></a><!--横幅-->
-      <a href=https://oilfieldtools.github.io/drill-collar><img src="./dp1.png" width="1500" height="2028"
-         alt="Torque Ring" ></a> <!--方钻杆-->
-      <a href=https://oilfieldtools.github.io/drill-collar><img src="./dp2.png" width="1500" height="2055" 
-         alt="Torque Ring" ></a><!--标准钻杆--> 
-      <a href=https://oilfieldtools.github.io/drill-collar/><img src=" ./dp3.png" width="1500" height="2084" 
-         alt="oilfield equipment Torque Ring" ></a> <!--标准钻杆尺码表-->
-    <a href=https://oilfieldtools.github.io/drill-collar><img src="./dp4.png" width="1500" height="2028" 
-         alt="Torque Ring" ></a><!--加重钻杆--> 
-     <a :href=https://oilfieldtools.github.io/drill-collar><img src="./dp5.jpg" width="1500" height="1500" 
-         alt="Torque Ring" ></a><!--钻杆图--> 
-     <video width="1500" height="1128" controls>
-       <source src="dp6.mp4" type="video/mp4">
-	</video><!--钻杆生产车间视频--> 
+      <a href=https://oilfieldtools.github.io/drill-collar><img src="./banner.png" width="1860" height="465" alt="oilfield equipment Drilling Jar petroleum rig drilling"></a><!--横幅-->
+      <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs1.png" width="1500" height="2028"
+         alt="Drilling Jar" ></a> <!--QY型液压震击器规格表-->
+      <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs2.png" width="1500" height="2055" 
+         alt="Drilling Jar" ></a><!--QYSZ 三代双作用液压震击器--> 
+      <a href=https://oilfieldtools.github.io/drill-collar/><img src=" ./djs3.png" width="1500" height="2084" 
+         alt="oilfield equipment Drilling Jar" ></a> <!--JYSZ双作用液压震击器-->
+    <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs4.png" width="1500" height="2028" 
+         alt="Drilling Jar" ></a><!--QJZ机械液压震击器--> 
+     <a :href=https://oilfieldtools.github.io/drill-collar><img src="./djs5.png" width="1500" height="1500" 
+         alt="Drilling Jar" ></a><!--ZSJ/ZXJ液压震击器--> 
+	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs6.png" width="1500" height="2028" 
+         alt="Drilling Jar" ></a><!--SJ双向减震器--> 
+	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs7.png" width="1500" height="2028" 
+         alt="Drilling Jar" ></a><!--YJ单向减震器--> 
+	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs8.png" width="1500" height="2028" 
+         alt="Drilling Jar" ></a><!--CSJ超级震击器--> 
+	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs9.png" width="1500" height="2028" 
+         alt="Drilling Jar" ></a><!--ZJS超级震击器--> 
+	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs10.png" width="1500" height="2028" 
+         alt="Drilling Jar" ></a><!--KXJ下部打捞缓冲器--> 
+	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs11.png" width="1500" height="2028" 
+         alt="Drilling Jar" ></a><!--BXJ下部打捞缓冲器--> 
+	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs12.png" width="1500" height="2028" 
+         alt="Drilling Jar" ></a><!--YSJ石油震击器--> 
+	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs13.png" width="1500" height="2028" 
+         alt="Drilling Jar" ></a><!--DJ地面震击器--> 
    </div>
       <!--以上是正文-->
 </body>
