--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--以下是产品菜单-->
         <th><select name="pageselect" onchange="self.location.href=options[selectedIndex].value" 
                     style='font-size:40px;text-align:center;background:lightseagreen;color:black;border:none'>
-                 <option value=' https://oilfieldtools.github.io/drillpipe'>Drill Pipe</option>
+                 <option value='https://oilfieldtools.github.io/drillingjar/'>Drilling Jar</option>
                  <option value='https://oilfieldtools.github.io/torquering'>Drilling Jar</option>
                  <option value='https://oilfieldtools.github.io/cableprotector'>Cable Protector</option>
                  <option value ='https://oilfieldtools.github.io/insulationjoint'><strong>Insulation Joint</strong></option>
