--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <!--以上是简介-->
       <table border='2' bgcolor='blue' align='center' width="1360" height=“65” style='font-size:30px'>
       <tr bgcolor='lightseagreen'>           
-        <th><a href=https://oilfieldtools.github.io/drill-collar style='color:black;text-decoration:none'>HOME</a></th>
-        <th><a href=https://oilfieldtools.github.io/drill-collar style='color:black;text-decoration:none'>About US</a></th>
+        <th><a href=https://oilfieldtools.github.io/drillcollar style='color:black;text-decoration:none'>HOME</a></th>
+        <th><a href=https://oilfieldtools.github.io/drillcollar style='color:black;text-decoration:none'>About US</a></th>
         <!--以下是产品菜单-->
         <th><select name="pageselect" onchange="self.location.href=options[selectedIndex].value" 
                     style='font-size:40px;text-align:center;background:lightseagreen;color:black;border:none'>
