--- a/index.html
+++ b/index.html
@@ -48,54 +48,54 @@
      </table>
     <!--以上是联系方式-->
    <div align="center">
-      <a href=https://oilfieldtools.github.io/drill-collar><img src="./banner.png" width="1860" height="465" alt="oilfield equipment Drilling Jar petroleum rig drilling"></a><!--横幅-->
-      <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs1.png" width="1500" height="2028"
+      <a href=https://oilfieldtools.github.io/drillcollar><img src="./banner.png" width="1860" height="465" alt="oilfield equipment Drilling Jar petroleum rig drilling"></a><!--横幅-->
+      <a href=https://oilfieldtools.github.io/drillcollar><img src="./djs1.png" width="1500" height="2028"
          alt="Drilling Jar" ></a> <!--QY型液压震击器规格表-->
-      <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs2.png" width="1500" height="2055" 
+      <a href=https://oilfieldtools.github.io/drillcollar><img src="./djs2.png" width="1500" height="2055" 
          alt="Drilling Jar" ></a><!--QYSZ 三代双作用液压震击器--> 
-      <a href=https://oilfieldtools.github.io/drill-collar/><img src=" ./djs3.png" width="1500" height="2084" 
+      <a href=https://oilfieldtools.github.io/drillcollar/><img src=" ./djs3.png" width="1500" height="2084" 
          alt="oilfield equipment Drilling Jar" ></a> <!--JYSZ双作用液压震击器-->
-    <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs4.png" width="1500" height="2028" 
+    <a href=https://oilfieldtools.github.io/drillcollar><img src="./djs4.png" width="1500" height="2028" 
          alt="Drilling Jar" ></a><!--QJZ机械液压震击器--> 
-     <a :href=https://oilfieldtools.github.io/drill-collar><img src="./djs5.png" width="1500" height="1500" 
+     <a :href=https://oilfieldtools.github.io/drillcollar><img src="./djs5.png" width="1500" height="1500" 
          alt="Drilling Jar" ></a><!--ZSJ/ZXJ液压震击器--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs6.png" width="1500" height="2028" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./djs6.png" width="1500" height="2028" 
          alt="Drilling Jar" ></a><!--SJ双向减震器--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs7.png" width="1500" height="2028" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./djs7.png" width="1500" height="2028" 
          alt="Drilling Jar" ></a><!--YJ单向减震器--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs8.png" width="1500" height="2028" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./djs8.png" width="1500" height="2028" 
          alt="Drilling Jar" ></a><!--CSJ超级震击器--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs9.png" width="1500" height="2028" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./djs9.png" width="1500" height="2028" 
          alt="Drilling Jar" ></a><!--ZJS超级震击器--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs10.png" width="1500" height="2028" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./djs10.png" width="1500" height="2028" 
          alt="Drilling Jar" ></a><!--KXJ下部打捞缓冲器--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs11.png" width="1500" height="2028" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./djs11.png" width="1500" height="2028" 
          alt="Drilling Jar" ></a><!--BXJ下部打捞缓冲器--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs12.png" width="1500" height="2028" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./djs12.png" width="1500" height="2028" 
          alt="Drilling Jar" ></a><!--YSJ石油震击器--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./djs13.png" width="1500" height="2028" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./djs13.png" width="1500" height="2028" 
          alt="Drilling Jar" ></a><!--DJ地面震击器--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./dj1.jpg" width="1500" height="847" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./dj1.jpg" width="1500" height="847" 
          alt="Drilling Jar" ></a><!--震击器图1--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./dj2.png" width="1500" height="1128" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./dj2.png" width="1500" height="1128" 
          alt="Drilling Jar" ></a><!--震击器图2--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./dj3.png" width="1500" height="1000" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./dj3.png" width="1500" height="1000" 
          alt="Drilling Jar" ></a><!--震击器图3--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./dj4.png" width="1500" height="1119" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./dj4.png" width="1500" height="1119" 
          alt="Drilling Jar" ></a><!--震击器图4--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./dj5.jpg" width="1500" height="1500" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./dj5.jpg" width="1500" height="1500" 
          alt="Drilling Jar" ></a><!--震击器图5--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./dj6.jpg" width="1500" height="1500" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./dj6.jpg" width="1500" height="1500" 
          alt="Drilling Jar" ></a><!--震击器图6--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./dj7.png" width="1500" height="1200" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./dj7.png" width="1500" height="1200" 
          alt="Drilling Jar" ></a><!--震击器图7--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./dj8.png" width="1500" height="1200" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./dj8.png" width="1500" height="1200" 
          alt="Drilling Jar" ></a><!--震击器图8--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./dj9.jpg" width="1500" height="980" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./dj9.jpg" width="1500" height="980" 
          alt="Drilling Jar" ></a><!--震击器图9--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./dj10.png" width="1500" height="815" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./dj10.png" width="1500" height="815" 
          alt="Drilling Jar" ></a><!--震击器图10--> 
-	   <a href=https://oilfieldtools.github.io/drill-collar><img src="./dj11.jpg" width="1500" height="950" 
+	   <a href=https://oilfieldtools.github.io/drillcollar><img src="./dj11.jpg" width="1500" height="950" 
          alt="Drilling Jar" ></a><!--震击器图11--> 
    </div>
       <!--以上是正文-->
