--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                  <option value='https://oilfieldtools.github.io/drillingjar/'>Drilling Jar</option>
                  <option value='https://oilfieldtools.github.io/drillingstabilizer'>Drilling Stabilizer</option>
                  <option value='https://oilfieldtools.github.io/drillpipe'>Drill Pipe</option>
+			     <option value='https://oilfieldtools.github.io/torquering'>Torque Ring</option>
                  <option value ='https://oilfieldtools.github.io/drillcollar'>Drill Collar</option>
                  <option value='https://oilfieldtools.github.io/suckerrod'>sucker rod</option>
           </select></th>
